[gd_scene load_steps=5 format=3 uid="uid://cuvj05qrij8mr"]

[ext_resource type="Script" path="res://compo/HitboxComponent.gd" id="1_chmfs"]
[ext_resource type="Script" path="res://scripts/rock.gd" id="1_qyuhj"]
[ext_resource type="Texture2D" uid="uid://cdrjek18m6urb" path="res://art/abilities/rock.png" id="2_yohuo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_uxymh"]
radius = 6.0

[node name="Rock" type="Node2D"]
script = ExtResource("1_qyuhj")

[node name="RockImage" type="Sprite2D" parent="."]
texture = ExtResource("2_yohuo")

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_chmfs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_uxymh")

[node name="Lifetime" type="Timer" parent="."]
wait_time = 8.0
one_shot = true
autostart = true

[connection signal="area_entered" from="HitboxComponent" to="." method="_on_hitbox_component_area_entered"]
[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
